--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <header class="text-center text-light my-4">
-        <h1 class="mb-4">Javascript Todo List</h1>
+        <h1 class="mb-4">Todo List</h1>
       </header>
 
       <ul class="list-group todos mx-auto text-light"></ul>
